app/styles/main.css
/* ... */
#menus {
	float: right;
	padding-left: 20px;
	padding-top: 10px;
}

.menu {
	padding-right: 15px;
	color: gray;
}

#file span { 
	font-weight: 100;
	padding-top: 50px;
	margin-left: 20px;
}



.search-container {
	z-index: 105;
	top: 40%;
	left: 50%;
	max-height:  500px;
	margin-top: -150px;
	margin-left: -100px;
	width: 200px;
	background: none;

	-webkit-box-shadow: 0px 0px 20px 0px #333;  /*Android 2.3+, iOS 4.0.2-4.2, Safari 3-4 */
    box-shadow: 0px 0px 20px 0px #333; /* Chrome 6+, Firefox 4+, IE 9+, iOS 5+, */
}

.search-title {
	color: white;
	padding: 5px;
	margin: 0px;
}

.search-list {
	overflow-y: scroll;
	overflow-x: hidden;
	list-style: none;
	padding: 0;
	margin: 0;
}

.search-element {
	background: #333;
	color: white;
	display: block;
	width: 100%;
	margin: 0;
	font-size: 11px;
	border-top: solid 1px #444;
	border-bottom: solid 1px #222;
	padding: 5px;
}

.search-element:hover {
	background: #444;
}

.library-search-input {
	color: lightblue;
	padding: 10px;
	width: 200px;
	background: #222;
	border: none;
	font-size: 15px;
}

.library-search-input:focus {
    outline:none;
}

#workspaces {
	position: absolute;
	top: 40px;
	bottom: 0px;
}

#viewer {
	position: absolute;
	top: 0px;
	bottom: 0px;
}

.blur {
/*	-webkit-filter: blur(2px);
    -moz-filter: blur(2px);
    -ms-filter: blur(2px);
    -o-filter: blur(2px);
    filter: blur(2px);*/
}

.workspace_container {
	position: absolute;
	top: 0px;
	bottom: 0px;
}

.menu-element {
	height: 40px;
	color: gray;
	float: right;
	padding: 12px;
	display: inline-block;
	border-left: 1px solid black;
}

.menu-element:hover {
	color: white;
	background: #333;
}

#add-workspace-button {
	border-right: 1px solid black;
	font-size: 16px;
	padding: 10px;
}

.dim-button {
	opacity: 0.4;
}

.dim-button:hover{
	opacity: 1;
}

.workspace-tab {
	float: left;
	height: 40px;
	color: gray;
	display: inline-block;
	border-left: 1px solid black;
}

.workspace-tab input{
	border: none;
	margin: 0px 5px 0px 0px;
	padding: 14px 0 10px 10px;
	display: inline-block;
	background: rgba(0,0,0,0);
	color: whitesmoke;
	font-size: 13px;
}

.workspace-tab input:focus{
	outline: none;
	background: rgba(0,0,0,0.2);
}

.current-workspace {
	color: lightblue;
	background: #222;
}

.workspace-tab:hover {
	color: white;
	background: #333;
}

.workspaces_curtain {
	display: none;
	opacity: 0.7;
	background: black;
	top: 0;
	bottom: 0;
	z-index: 95;
}

.collapsed {
	opacity: 0;
}

.workspace {
	z-index: 90;
	position: absolute;
	width: 20000px;
	height: 20000px;
}

.workspace_back {
	z-index: 50;
	position: absolute;
	width: 20000px;
	height: 20000px;
}

.workspace_canvas {
	position: absolute;
	width: 20000px;
	height: 20000px;
	background-color: rgba(0,0,0,0.3);
}

#workspace_hide {
	opacity: 0.5;
	font-size: 16px;
	padding: 10px;
	bottom: 10px;
	background: #222;
	position: absolute;
	z-index: 100;
	
	-webkit-box-shadow: 0px 0px 20px 0px #333;  /*Android 2.3+, iOS 4.0.2-4.2, Safari 3-4 */
    box-shadow: 0px 0px 20px 0px #333; /* Chrome 6+, Firefox 4+, IE 9+, iOS 5+, */
}

#workspace_hide span {
	display:inline-block; 
	font-weight: bold; 
	line-height: 12px;
	font-size: 12px; 
	margin: 3px; 
	color: #AAA;
}

#workspace_hide i {
	margin: 5px 0 0 0;
}

#workspace_hide:hover {
	opacity: 1.0;
}

.rightside {
	right: 10px;
}

.leftside {
	left: 10px;
}


.remove-button {
	margin: 0 10px 0 0;
}

.node {

	/*text-shadow: 0px -3px #000;*/

	-webkit-user-select: none; /* Chrome/Safari */        
	-moz-user-select: none; /* Firefox */
	-ms-user-select: none; /* IE10+ */

	/* Rules below not implemented in browsers yet */
	-o-user-select: none;
	user-select: none;

	z-index: 98;
	/*border-radius:2px;*/
	position: absolute;
	background: #444;
	padding-top: 2px;
	padding-bottom: 2px;
	color: #DDD;

	/*border: 1px solid #000;*/

	/* IE10 Consumer Preview */ 
	background-image: -ms-radial-gradient(center top, circle farthest-corner, #444444 0%, #1D0722 100%);

	/* Mozilla Firefox */ 
	background-image: -moz-radial-gradient(center top, circle farthest-corner, #444444 0%, #1D0722 100%);

	/* Opera */ 
	background-image: -o-radial-gradient(center top, circle farthest-corner, #444444 0%, #1D0722 100%);

	/* Webkit (Safari/Chrome 10) */ 
	background-image: -webkit-gradient(radial, center top, 0, center top, 553, color-stop(0, #444444), color-stop(1, #1D0722));

	/* Webkit (Chrome 11+) */ 
	background-image: -webkit-radial-gradient(center top, circle farthest-corner, #444444 0%, #1D0722 100%);

	/* W3C Markup, IE10 Release Preview */ 
	background-image: radial-gradient(circle farthest-corner at center top, #444444 0%, #1D0722 100%);
}

.watch-data-container{
	max-width: 180px;
	max-height: 360px;
	font-family: monospace;
	margin: 0px 5px 0px 10px;
	color: lightblue;
	text-shadow: none;
	overflow-y: scroll;
	overflow-x: hidden;
	border-radius:3px;
	border-top: 1px solid #111;

	background-image: -webkit-gradient(linear, 0 100%, 0 0, from(#888888), to(#444444));
	background-image: -webkit-linear-gradient(#888888 0%, #444444 100%);
	background-image: -moz-linear-gradient(#888888 0%, #444444 100%);
	background-image: -o-linear-gradient(#888888 0%, #444444 100%);
	background-image: linear-gradient(#888888 0%, #444444 100%);
}

.num-data-container{
	width: 36px;
	font-size: 10px;
	font-family: monospace;
	overflow:hidden;
	margin: 0px 5px 0px 10px;
	color: lightblue;
	text-shadow: none;
	border-radius:3px;
	border-top: 1px solid #111;

	background-image: -webkit-gradient(linear, 0 100%, 0 0, from(#888888), to(#444444));
	background-image: -webkit-linear-gradient(#888888 0%, #444444 100%);
	background-image: -moz-linear-gradient(#888888 0%, #444444 100%);
	background-image: -o-linear-gradient(#888888 0%, #444444 100%);
	background-image: linear-gradient(#888888 0%, #444444 100%);
}

.currentValue {
	color:lightblue;
}

.toggle-vis {
	display: none;
	position: absolute;
	bottom: 0;
	right: 0;
	opacity: 0.3;
	padding: 5px;
}

.toggle-vis:hover {
	opacity: 1;
}
/* ... */

